RESOLVED FIXED251819
configureForNetworkConnectionIntegrity() should not be called unconditionally
https://bugs.webkit.org/show_bug.cgi?id=251819
Summary configureForNetworkConnectionIntegrity() should not be called unconditionally
Charlie Wolfe
Reported 2023-02-06 15:11:47 PST
We should only call configureForNetworkConnectionIntegrity() when we the network connection integrity policy is enabled.
Attachments
Charlie Wolfe
Comment 1 2023-02-06 15:12:05 PST
Charlie Wolfe
Comment 2 2023-02-06 15:19:36 PST
EWS
Comment 3 2023-02-07 20:36:01 PST
Committed 259991@main (c603913ff2dd): <https://commits.webkit.org/259991@main> Reviewed commits have been landed. Closing PR #9717 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.