configureForNetworkConnectionIntegrity() should not be called unconditionally https://bugs.webkit.org/show_bug.cgi?id=251819 rdar://104709975

Reviewed by Wenson Hsieh.

We should only call configureForNetworkConnectionIntegrity() when the network
connection integrity policy is enabled. This will race this function call against
the resources loaded after the main frame, which should be fine.

* Source/WebKit/NetworkProcess/cocoa/NetworkDataTaskCocoa.mm:
(WebKit::NetworkDataTaskCocoa::NetworkDataTaskCocoa):
* Source/WebKit/NetworkProcess/cocoa/NetworkSessionCocoa.mm:
(WebKit::SessionWrapper::initialize):
(WebKit::NetworkSessionCocoa::clearCredentials):
(WebKit::createURLSession): Deleted.

Canonical link: https://commits.webkit.org/259991@main